# meteo-data

./: .gitignore
.github/workflows/: 01-deploy-infrastructure.yml  02-deploy-docker.yml  02-run-dagster.yml  deploy-all.yml  deploy-infrastructure.yml
dagster/: dagster.yaml  docker-compose.yml  load-lv-grid.ipynb  pyproject.toml  workspace.yaml
dagster/dockerfiles/: dagster-user-code.dockerfile  dagster.dockerfile  nginx-basic-auth.dockerfile
dagster/pipeline/: assets.py  definitions.py  processed_data_assets.py  raw_data_assets.py
dagster/pipeline/api_wrapper/: __init__.py
dagster/pipeline/config/: lv_grid.csv
dagster/pipeline/data/: hourly_data.csv
dagster/shapfiles/: lv_10km.shp  lv_10km.shx  world-administrative-boundaries.dbf  world-administrative-boundaries.shp  world-administrative-boundaries.shx
infrastructure/ansible/: 01-ensure-docker.yml  02-copy-dagster.yml  03-run-dagster.yml  XX-set-environment.yml  ansible.cfg  inventory.yml
infrastructure/terraform/: .terraform.lock.hcl  main.tf  object-storage.tf  outputs.tf  provider.tf
meteo-data-exploratory/: exploratory.ipynb  hello.py  pyproject.toml
