[project]
name = "meteo-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster-postgres>=0.25.6",
    "dagster>=1.9.6",
    "dagster-webserver>=1.9.6",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.1",
    "openmeteo-requests>=1.3.0",
    "pandas>=2.2.3",
    "polars>=1.18.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "reverse-geocode>=1.6.5",
    "simpledbf>=0.2.6",
    "dagster-graphql>=1.9.6",
    "dagster-docker>=0.25.6",
    "dagster-polars>=0.25.6",
    "s3fs>=2024.12.0",
]

[tool.dagster]
module_name = "pipeline.definitions"
code_location_name = "pipeline"
