[project]
name = "meteo-data-exploratory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pyarrow>=19.0.0",
    "pydotenv>=0.0.7",
    "scipy>=1.15.1",
]
